--- a/src/main/webapp/app/layouts/childs/list-pro-2/lstpro2.component.scss
+++ b/src/main/webapp/app/layouts/childs/list-pro-2/lstpro2.component.scss
@@ -13,4 +13,11 @@
   margin: 10px 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding-bottom: 35px;
+  width: 268px;
+  height: 400px;
+}
+
+.single-product {
+  width: 250px;
+  height: 362px;
 }
