--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -7,19 +7,19 @@
         <nav class="d-none d-lg-block">
           <ul class="header-bottom-list d-flex">
             <li class="category-nav text-nowrap">
-              <a routerLink="/product-client" (click)="changeSearch(100)">Điện thoại</a>
+              <a routerLink="/product-client" (click)="changeSearch(TypeID.PRODUCT_SMART_PHONE)">Điện thoại</a>
             </li>
             <li class="category-nav text-nowrap">
-              <a routerLink="/product-client" (click)="changeSearch(101)">Laptop<i class="fa fa-angle-down"></i></a>
+              <a routerLink="/product-client" (click)="changeSearch(TypeID.PRODUCT_LAPTOP)">Laptop<i class="fa fa-angle-down"></i></a>
             </li>
             <li class="category-nav text-nowrap">
-              <a routerLink="/product-client" (click)="changeSearch(102)">Tablet</a>
+              <a routerLink="/product-client" (click)="changeSearch(TypeID.PRODUCT_TAPBLET)">Tablet</a>
             </li>
             <li class="category-nav text-nowrap">
-              <a routerLink="/product-client" (click)="changeSearch(103)">Phụ kiện</a>
+              <a routerLink="/product-client" (click)="changeSearch(TypeID.PRODUCT_SMART_WATCH)">Phụ kiện</a>
             </li>
             <li class="category-nav text-nowrap">
-              <a routerLink="/product-client" (click)="changeSearch(104)">Đồng hồ thông minh</a>
+              <a routerLink="/product-client" (click)="changeSearch(TypeID.PRODUCT_ACCESSORY)">Đồng hồ thông minh</a>
             </li>
           </ul>
         </nav>
