--- a/src/main/webapp/app/entities/order-details/detail/order-details-detail.component.html
+++ b/src/main/webapp/app/entities/order-details/detail/order-details-detail.component.html
@@ -40,7 +40,7 @@
         <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span jhiTranslate="entity.action.back">Back</span>
       </button>
 
-      <button type="button" [routerLink]="['/order-details', orderDetails.id, 'edit']" class="btn btn-primary">
+      <button type="button" [routerLink]="['/order-admin', orderDetails.id, 'edit']" class="btn btn-primary">
         <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span jhiTranslate="entity.action.edit">Edit</span>
       </button>
     </div>
