--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,5 +1,8 @@
 <!--nav bar by anhlam-->
-<div class="header-bottom header-sticky" style="background-color: antiquewhite">
+
+<jhi-banner></jhi-banner>
+
+<div class="header-bottom header-sticky mt-50" style="background-color: antiquewhite">
   <div class="container">
     <div class="row align-items-center">
       <!--      <jhi-sidebar-in-nav></jhi-sidebar-in-nav>-->
@@ -33,8 +36,6 @@
 <jhi-lstpro-2></jhi-lstpro-2>
 
 <jhi-lstpro></jhi-lstpro>
-
-<jhi-banner></jhi-banner>
 
 <jhi-banner-manufacturer></jhi-banner-manufacturer>
 
