--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -13,14 +13,6 @@
   </a>
   <div class="navbar-collapse collapse" id="navbarResponsive" [ngbCollapse]="isNavbarCollapsed" [ngSwitch]="account !== null">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-        <a class="nav-link" routerLink="/" (click)="collapseNavbar()">
-          <span>
-            <fa-icon icon="home"></fa-icon>
-            <span jhiTranslate="global.menu.home">Home</span>
-          </span>
-        </a>
-      </li>
       <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
       <li
         *ngSwitchCase="true"
@@ -88,7 +80,7 @@
           <li>
             <a
               class="dropdown-item"
-              routerLink="order-details"
+              routerLink="order-admin"
               routerLinkActive="active"
               [routerLinkActiveOptions]="{ exact: true }"
               (click)="collapseNavbar()"
@@ -221,61 +213,61 @@
           </li>
         </ul>
       </li>
-      <li
-        ngbDropdown
-        class="nav-item dropdown pointer"
-        display="dynamic"
-        routerLinkActive="active"
-        [routerLinkActiveOptions]="{ exact: true }"
-      >
-        <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="account-menu" data-cy="accountMenu">
-          <span *ngIf="!account?.imageUrl">
-            <fa-icon icon="user"></fa-icon>
-            <span jhiTranslate="global.menu.account.main">Account</span>
-          </span>
-          <span *ngIf="account?.imageUrl">
-            <img [src]="account!.imageUrl" class="profile-image rounded-circle" alt="Avatar" />
-          </span>
-        </a>
-        <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="account-menu">
-          <li *ngSwitchCase="true">
-            <a class="dropdown-item" routerLink="account/settings" routerLinkActive="active" (click)="collapseNavbar()" data-cy="settings">
-              <fa-icon icon="wrench" [fixedWidth]="true"></fa-icon>
-              <span jhiTranslate="global.menu.account.settings">Settings</span>
-            </a>
-          </li>
-          <li *ngSwitchCase="true">
-            <a
-              class="dropdown-item"
-              routerLink="account/password"
-              routerLinkActive="active"
-              (click)="collapseNavbar()"
-              data-cy="passwordItem"
-            >
-              <fa-icon icon="lock" [fixedWidth]="true"></fa-icon>
-              <span jhiTranslate="global.menu.account.password">Password</span>
-            </a>
-          </li>
-          <li *ngSwitchCase="true">
-            <a class="dropdown-item" (click)="logout()" id="logout" data-cy="logout">
-              <fa-icon icon="sign-out-alt" [fixedWidth]="true"></fa-icon>
-              <span jhiTranslate="global.menu.account.logout">Sign out</span>
-            </a>
-          </li>
-          <li *ngSwitchCase="false">
-            <a class="dropdown-item" (click)="login()" id="login" data-cy="login">
-              <fa-icon icon="sign-in-alt" [fixedWidth]="true"></fa-icon>
-              <span jhiTranslate="global.menu.account.login">Sign in</span>
-            </a>
-          </li>
-          <li *ngSwitchCase="false">
-            <a class="dropdown-item" routerLink="account/register" routerLinkActive="active" (click)="collapseNavbar()" data-cy="register">
-              <fa-icon icon="user-plus" [fixedWidth]="true"></fa-icon>
-              <span jhiTranslate="global.menu.account.register">Register</span>
-            </a>
-          </li>
-        </ul>
-      </li>
+      <!--      <li-->
+      <!--        ngbDropdown-->
+      <!--        class="nav-item dropdown pointer"-->
+      <!--        display="dynamic"-->
+      <!--        routerLinkActive="active"-->
+      <!--        [routerLinkActiveOptions]="{ exact: true }"-->
+      <!--      >-->
+      <!--        <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="account-menu" data-cy="accountMenu">-->
+      <!--          <span *ngIf="!account?.imageUrl">-->
+      <!--            <fa-icon icon="user"></fa-icon>-->
+      <!--            <span jhiTranslate="global.menu.account.main">Account</span>-->
+      <!--          </span>-->
+      <!--          <span *ngIf="account?.imageUrl">-->
+      <!--            <img [src]="account!.imageUrl" class="profile-image rounded-circle" alt="Avatar" />-->
+      <!--          </span>-->
+      <!--        </a>-->
+      <!--        <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="account-menu">-->
+      <!--          <li *ngSwitchCase="true">-->
+      <!--            <a class="dropdown-item" routerLink="account/settings" routerLinkActive="active" (click)="collapseNavbar()" data-cy="settings">-->
+      <!--              <fa-icon icon="wrench" [fixedWidth]="true"></fa-icon>-->
+      <!--              <span jhiTranslate="global.menu.account.settings">Settings</span>-->
+      <!--            </a>-->
+      <!--          </li>-->
+      <!--          <li *ngSwitchCase="true">-->
+      <!--            <a-->
+      <!--              class="dropdown-item"-->
+      <!--              routerLink="account/password"-->
+      <!--              routerLinkActive="active"-->
+      <!--              (click)="collapseNavbar()"-->
+      <!--              data-cy="passwordItem"-->
+      <!--            >-->
+      <!--              <fa-icon icon="lock" [fixedWidth]="true"></fa-icon>-->
+      <!--              <span jhiTranslate="global.menu.account.password">Password</span>-->
+      <!--            </a>-->
+      <!--          </li>-->
+      <!--          <li *ngSwitchCase="true">-->
+      <!--            <a class="dropdown-item" (click)="logout()" id="logout" data-cy="logout">-->
+      <!--              <fa-icon icon="sign-out-alt" [fixedWidth]="true"></fa-icon>-->
+      <!--              <span jhiTranslate="global.menu.account.logout">Sign out</span>-->
+      <!--            </a>-->
+      <!--          </li>-->
+      <!--          <li *ngSwitchCase="false">-->
+      <!--            <a class="dropdown-item" (click)="login()" id="login" data-cy="login">-->
+      <!--              <fa-icon icon="sign-in-alt" [fixedWidth]="true"></fa-icon>-->
+      <!--              <span jhiTranslate="global.menu.account.login">Sign in</span>-->
+      <!--            </a>-->
+      <!--          </li>-->
+      <!--          <li *ngSwitchCase="false">-->
+      <!--            <a class="dropdown-item" routerLink="account/register" routerLinkActive="active" (click)="collapseNavbar()" data-cy="register">-->
+      <!--              <fa-icon icon="user-plus" [fixedWidth]="true"></fa-icon>-->
+      <!--              <span jhiTranslate="global.menu.account.register">Register</span>-->
+      <!--            </a>-->
+      <!--          </li>-->
+      <!--        </ul>-->
+      <!--      </li>-->
     </ul>
   </div>
 </nav>
@@ -304,7 +296,7 @@
       <!-- Categorie Search Box End Here -->
       <!-- Cart Box Start Here -->
       <div class="col-lg-4 col-md-12">
-        <div class="cart-box mt-all-30">
+        <div class="cart-box mt-all-30" [ngSwitch]="account !== null">
           <ul class="d-flex justify-content-lg-end justify-content-center align-items-center">
             <li>
               <a routerLink="/cart"
@@ -314,10 +306,82 @@
                 ></a
               >
             </li>
-            <li class="mr-60">
+            <li class="">
               <a href="#"
                 ><i class="lnr lnr-heart"></i><span class="my-cart"><span>Yêu</span><span>Thích (0)</span></span></a
               >
+            </li>
+            <!--            <li>-->
+            <!--              <a href="#">-->
+            <!--                <i class="lnr lnr-user">-->
+            <!--                </i><span class="my-cart"><span> <strong>Sign in</strong> Or</span><span> Join My Site</span></span></a>-->
+            <!--            </li>-->
+            <li
+              ngbDropdown
+              class="nav-item dropdown pointer"
+              display="dynamic"
+              routerLinkActive="active"
+              [routerLinkActiveOptions]="{ exact: true }"
+            >
+              <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="account-menu" data-cy="accountMenu">
+                <span *ngIf="!account?.imageUrl">
+                  <i class="lnr lnr-user"></i>
+                  <span jhiTranslate="global.menu.account.main">Account</span>
+                </span>
+                <span *ngIf="account?.imageUrl">
+                  <img [src]="account!.imageUrl" class="profile-image rounded-circle" alt="Avatar" />
+                </span>
+              </a>
+              <ul class="dropdown-menu" ngbDropdownMenu aria-labelledby="account-menu">
+                <li *ngSwitchCase="true">
+                  <a
+                    class="dropdown-item"
+                    routerLink="account/settings"
+                    routerLinkActive="active"
+                    (click)="collapseNavbar()"
+                    data-cy="settings"
+                  >
+                    <fa-icon icon="wrench" [fixedWidth]="true"></fa-icon>
+                    <span jhiTranslate="global.menu.account.settings">Settings</span>
+                  </a>
+                </li>
+                <li *ngSwitchCase="true">
+                  <a
+                    class="dropdown-item"
+                    routerLink="account/password"
+                    routerLinkActive="active"
+                    (click)="collapseNavbar()"
+                    data-cy="passwordItem"
+                  >
+                    <fa-icon icon="lock" [fixedWidth]="true"></fa-icon>
+                    <span jhiTranslate="global.menu.account.password">Password</span>
+                  </a>
+                </li>
+                <li *ngSwitchCase="true">
+                  <a class="dropdown-item" (click)="logout()" id="logout" data-cy="logout">
+                    <fa-icon icon="sign-out-alt" [fixedWidth]="true"></fa-icon>
+                    <span jhiTranslate="global.menu.account.logout">Sign out</span>
+                  </a>
+                </li>
+                <li *ngSwitchCase="false">
+                  <a class="dropdown-item" (click)="login()" id="login" data-cy="login">
+                    <fa-icon icon="sign-in-alt" [fixedWidth]="true"></fa-icon>
+                    <span jhiTranslate="global.menu.account.login">Sign in</span>
+                  </a>
+                </li>
+                <li *ngSwitchCase="false">
+                  <a
+                    class="dropdown-item"
+                    routerLink="account/register"
+                    routerLinkActive="active"
+                    (click)="collapseNavbar()"
+                    data-cy="register"
+                  >
+                    <fa-icon icon="user-plus" [fixedWidth]="true"></fa-icon>
+                    <span jhiTranslate="global.menu.account.register">Register</span>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
