--- a/src/main/webapp/app/layouts/navbar/navbar.component.scss
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.scss
@@ -17,11 +17,12 @@ Navbar
 }
 
 .navbar {
-  padding: 0.2rem 200px 0.2rem 213px;
+  padding: 0.2rem 106px 0.2rem 58px;
+  background-color: #000000;
   .dropdown-item.active,
   .dropdown-item.active:focus,
   .dropdown-item.active:hover {
-    background-color: $dark;
+    background-color: #000000;
   }
 
   ul.navbar-nav {
@@ -32,6 +33,7 @@ Navbar
 
   a.nav-link {
     font-weight: 400;
+    color: $white;
   }
 
   .navbar-toggler {
@@ -45,15 +47,25 @@ Navbar
 Logo styles
 ========================================================================== */
 .logo-img {
-  height: 120px;
-  width: 120px;
+  height: 55px;
+  width: 158px;
   display: inline-block;
   vertical-align: middle;
-  background: url('../../../content/img/logo/anhlam.jpg') no-repeat center center;
-  background-size: contain;
+  background: url('../../../content/img/logo/SellPhone.png') no-repeat center center;
+  background-size: 215px;
 }
 
 .nav-search {
   border-top: 1px solid rgb(235, 235, 235);
   padding: 0 0 0 0;
+}
+
+.div-category {
+  //margin-left: auto;
+  //margin-right: auto;
+  height: 40px;
+  margin: auto 370px auto auto;
+  .category-nav {
+    padding-right: 15px;
+  }
 }
